Adjust repo url and name

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,8 +10,8 @@ nav:
 # Copyright
 copyright: 'Copyright &copy; University of Bern, IT Service Office'
 # Social links at botoom right
-repo_name: 'ubelix/ubelix.github.io'
-repo_url: 'https://github.com/ubelix/ubelix.github.io'
+repo_name: 'ubelix/ubelix_documentation'
+repo_url: 'https://github.com/ubelix/ubelix_documentation'
 edit_uri: ''
 
 # Configuration
