--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ nav:
     - Overview: user-guide/index.md
   - Contributing: contributing.md
 
-# Copyright
+# Copyright footer
 copyright: 'Copyright &copy; University of Bern, IT Service Office'
 # Social links at botoom right
 repo_name: 'ubelix/ubelix_documentation'
@@ -16,20 +16,28 @@ edit_uri: ''
 
 # Configuration
 theme:
-  name: null
-  custom_dir: 'mkdocs-material/material'
-  language: 'en'
-  palette:
-    primary: 'red'
-    accent: 'indigo'
-  font:
-    text: 'Roboto'
-    code: 'Roboto Mono'
-  logo:
-    icon: 'cloud'
-  feature:
+  name: material
+
+extra_css:
+ - 'stylesheets/unibe.css'
+
+# See https://python-markdown.github.io/extensions/ and
+# See https://github.com/Python-Markdown/markdown/wiki/Third-Party-Extensions#Bundles
+markdown_extensions:
+  - abbr
+  - def_list
+  - footnotes
+  - tables
+  - admonition
+  - codehilite:
+      guess_lang: false
+  - sane_lists
+  - smarty
+  - toc
+
 
 extra:
   social:
     - type: 'github'
       link: 'https://github.com/ubelix'
+
