--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
     - Job Management with Slurm:
       - Job Submission: user-guide/job-management/job-submission.md
       - Monitoring Jobs: user-guide/job-management/monitoring-jobs.md
+      - Deleting Jobs: user-guide/job-management/deleting-jobs.md
     - File System Quota: user-guide/file-system-quota.md
   - Contributing: contributing.md
 
