add page matlab

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
       - Pre-Installed Software: user-guide/software/pre-installed-software.md
       - Installing Custom Software: user-guide/software/installing-custom-software.md
       - Terminal Multiplexer (tmux): user-guide/software/terminal-multiplexer-tmux.md
+      - Matlab: user-guide/software/matlab.md
     - File System Quota: user-guide/file-system-quota.md
   - Contributing: contributing.md
 
