--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,10 @@ nav:
       - Matlab: user-guide/software/matlab.md
       - Python: user-guide/software/python.md
       - R: user-guide/software/r.md
+      - Relion: user-guide/software/relion.md
+      - Singularity: user-guide/software/singularity.md
     - File System Quota: user-guide/file-system-quota.md
+    - FAQ: user-guide/faq.md
   - Contributing: contributing.md
 
 # Copyright footer
