add Account Activation and Login Page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Overview: overview.md
   - Code of Conduct: code-of-conduct.md
   - User Guide:
+    - Account Activation and Login: user-guide/account-activation-login.md
     - Getting Started: user-guide/getting-started.md
     - File Transfer: user-guide/file-transfer.md
     - Job Management with Slurm:
