--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
       - Terminal Multiplexer (tmux): user-guide/software/terminal-multiplexer-tmux.md
       - Matlab: user-guide/software/matlab.md
       - Python: user-guide/software/python.md
-      - JupyterLab: : user-guide/software/JupyterLab.md
+      - JupyterLab: user-guide/software/JupyterLab.md
       - R: user-guide/software/r.md
       - Relion: user-guide/software/relion.md
       - Singularity: user-guide/software/singularity.md
