--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,14 +2,32 @@ site_name: HPC Documentation
 #theme: mkdocs
 use_directory_urls: false
 nav:
+  - Getting Started:
+    - UniBE HPC system Ubelix: overview.md
+    - Code of Conduct: code-of-conduct.md
+    - HPC Projects: hpc-projects/overview.md
+    - Account Activation and Login: user-guide/account-activation-login.md
+  - Scientific Computing:
+    - Pre-Installed Software: user-guide/software/pre-installed-software.md
+    - Installing Custom Software: user-guide/software/installing-custom-software.md
+    - Supported Applications:
+      - Terminal Multiplexer (tmux): user-guide/software/terminal-multiplexer-tmux.md
+      - Matlab: user-guide/software/matlab.md
+      - Python: user-guide/software/python.md
+      - JupyterLab: user-guide/software/JupyterLab.md
+      - R: user-guide/software/r.md
+      - Relion: user-guide/software/relion.md
+      - Singularity: user-guide/software/singularity.md
+  - Storage:
+    - File System Quota: user-guide/file-system-quota.md
+  - General:
+    - FAQ: user-guide/faq.md
+    - Hall of Fame: halloffame.md
+
+
   - Home: index.md
-  - Overview: overview.md
-  - Code of Conduct: code-of-conduct.md
-  - HPC Projects:
-    - Overview: hpc-projects/overview.md
   - User Guide:
     - Getting Started: user-guide/getting-started.md
-    - Account Activation and Login: user-guide/account-activation-login.md
     - File Transfer: user-guide/file-transfer.md
     - Job Management with Slurm:
       - Job Submission: user-guide/job-management/submission.md
@@ -20,20 +38,7 @@ nav:
       - Interactive Jobs: user-guide/job-management/interactive-jobs.md
       - Investigating a Job Failure: user-guide/job-management/investigating-job-failure.md
       - Checkpointing: user-guide/job-management/checkpointing.md
-    - Software:
-      - Pre-Installed Software: user-guide/software/pre-installed-software.md
-      - Installing Custom Software: user-guide/software/installing-custom-software.md
-      - Terminal Multiplexer (tmux): user-guide/software/terminal-multiplexer-tmux.md
-      - Matlab: user-guide/software/matlab.md
-      - Python: user-guide/software/python.md
-      - JupyterLab: user-guide/software/JupyterLab.md
-      - R: user-guide/software/r.md
-      - Relion: user-guide/software/relion.md
-      - Singularity: user-guide/software/singularity.md
-    - File System Quota: user-guide/file-system-quota.md
-    - FAQ: user-guide/faq.md
 #  - Contributing: contributing.md
-  - Hall of Fame: halloffame.md
 
 # Copyright footer
 copyright: 'Copyright &copy; University of Bern, IT Service Office'
