add CUDA page and toolchain comment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
       - Pre-Installed Software: user-guide/software/pre-installed-software.md
       - Installing Custom Software: user-guide/software/installing-custom-software.md
       - Terminal Multiplexer (tmux): user-guide/software/terminal-multiplexer-tmux.md
+      - CUDA: user-guide/software/CUDA.md
       - Matlab: user-guide/software/matlab.md
       - Python: user-guide/software/python.md
       - JupyterLab: user-guide/software/JupyterLab.md
