migration docu improvement and FAQ

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ use_directory_urls: false
 nav:
   - Home: index.md
   - IMPORTANT..Home Migration: HOME_migration.md 
+  - PLAN..Workspaces: overview_workspaces.md
   - Overview: overview.md
   - Code of Conduct: code-of-conduct.md
   - User Guide:
