--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,6 @@ markdown_extensions:
 
 extra:
   social:
-    - type: 'github'
-      link: 'https://github.com/ubelix'
+    - icon: fontawesome/brands/github-alt
+      link: https://github.com/hpc-unibe-ch
 
