--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       #      - Port Forwarding:
     - Workspaces: getting-Started/workspaces.md
     - SSH customization: getting-Started/ssh-customization.md
+    - Parallelization: getting-Started/parallelization.md
   - Workspaces:
     - Overview: hpc-workspaces/workspaces.md
     - Workspace management: hpc-workspaces/management.md
