--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,20 +62,14 @@ nav:
   - FAQ: general/faq.md
   - Hall of Fame: halloffame.md
   - Code of Conduct: code-of-conduct.md
-      #
-      #
-      #  - Home: index.md
-      #  - User Guide:
-      #    - Getting Started: user-guide/getting-started.md
-      #    - File Transfer: user-guide/file-transfer.md
-      #    - Job Management with Slurm:
+
 
 # Copyright footer
 copyright: 'Copyright &copy; University of Bern, IT Service Office'
-# Social links at botoom right
+# Link to repo
 repo_name: 'hpc-unibe-ch/hpc-docs'
 repo_url: 'https://github.com/hpc-unibe-ch/hpc-docs'
-edit_uri: ''
+edit_uri: 'edit/main/docs'
 
 # Configuration
 theme:
@@ -84,24 +78,31 @@ theme:
 extra_css:
  - 'stylesheets/unibe.css'
 
+plugins:
+  - git-revision-date
+
 # See https://python-markdown.github.io/extensions/ and
 # See https://github.com/Python-Markdown/markdown/wiki/Third-Party-Extensions#Bundles
 #     https://facelessuser.github.io/pymdown-extensions/
 markdown_extensions:
   - abbr
+  - admonition
+  - attr_list
   - def_list
   - footnotes
-  - tables
-  - admonition
   - codehilite:
       guess_lang: false
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
   - sane_lists
   - smarty
+  - tables
   - toc
-  - pymdownx.superfences
-  - attr_list
 
-
+# Social links bottom right
 extra:
   social:
     - icon: fontawesome/brands/github-alt
