--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: 3.x
       - run: pip install mkdocs-material
       - run: pip install mkdocs-git-revision-date-plugin
       - run: mkdocs gh-deploy --force
