Fix repo_url in mkdocs configfile

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
 copyright: 'Copyright &copy; University of Bern, IT Service Office'
 # Link to repo
 repo_name: 'hpc-unibe-ch/hpc-docs'
-repo_url: 'https://github.com/hpc-unibe-ch/hpc-docs'
+repo_url: 'https://github.com/hpc-unibe-ch/hpc-unibe-ch.github.io'
 edit_uri: 'edit/main/docs'
 
 # Configuration
