Improve costs and investments page
This page should have sufficient information to redirect users to this
page if they have questions.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
     - Scratch: file-system/scratch.md
   - Optimization:
     - Scaling: optimization/scaling.md
-  - Investment: general/investment.md
+  - Costs and Investments: general/costs_investments.md
   - Support: general/support.md
   - FAQ: general/faq.md
   - Hall of Fame: halloffame.md
