Add documentation on interactive vs code sessions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
           - Relion: software/relion.md
           - Singularity: software/singularity.md
           - Terminal Multiplexer (tmux): software/terminal-multiplexer-tmux.md
+          - Visual Studio Code: software/VisualStudioCode.md
   - Storage:
       - Overview: file-system/filesystem-overview.md
       - Quota: file-system/quota.md
