--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
           - EasyBuild: software/installing/easybuild.md
           - Containers: software/containers/apptainer.md
       - Software guides:
+          - Alphafold3: software/packages/alphafold3.md
           - JupyterLab: software/packages/JupyterLab.md
           - MATLAB: software/packages/matlab.md
           - Parallel BZIP2: software/packages/bzip2.md
